applications/platform/keycloak/keycloak-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-http
  namespace: keycloak
  annotations:
    description: "The web server's http port."
  labels:
    app: keycloak
spec:
  selector:
    app: keycloak
    component: keycloak
  ports:
  - name: keycloak
    protocol: TCP
    port: 80
    targetPort: 9990
